--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "squizlabs/php_codesniffer": "3.*"
   },
   "require": {
-    "php": "^7.3",
+    "php": "7.3.* || 7.4.* || 8.0.*",
     "ext-xmlreader": "*",
     "ext-simplexml": "*",
     "ext-xmlwriter": "*",
