--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "kinimodmeyer/tradebyte-sdk",
+  "name": "induxx/tradebyte-sdk",
   "type": "library",
   "description": "Tradebyte SDK",
   "homepage": "https://github.com/kinimodmeyer/tradebyte-sdk-php",
